--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Subscribe to Updates</title>
+  <title>Subscription Page</title>
+  <script src="./script.js" defer></script>
 </head>
 <body>
-  <h1>Subscribe to Our Newsletter</h1>
-  <form id="subscriptionForm">
-    <label for="email">Email:</label>
-    <input type="email" id="email" required />
-    <button type="submit">Subscribe</button>
-  </form>
-  <p id="statusMessage"></p>
+  <h1>Subscribe to our Newsletter</h1>
+  <div>
+    <input type="email" id="email" placeholder="Enter your email" />
+    <button onclick="subscribe()">Subscribe</button>
+  </div>
 
-  <script src="script.js"></script>
+  <hr />
+
+  <h2>View Subscriptions</h2>
+  <button onclick="fetchSubscriptions()">Show Subscriptions</button>
+  <div id="subscription-list"></div>
 </body>
 </html>
